google-site-verification

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="3DlpLFB08KBqZA1YtmN_Fgg3qxlKX8QiN1bA-zOE1JA"
+    />
     <title>Erpicoding</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
