add Links section

--- a/index.html
+++ b/index.html
@@ -56,8 +56,14 @@
         <p id="languageLogoSource"></p>
       </div>
     </section>
-    <section class="contentSection" id="section2">
+    <section class="contentSection linksBg" id="section2">
       <h2 class="sectionHeading">Links</h2>
+      <a href="https://github.com/erpicoding" target="_blank" class="firstLink"
+        >Github</a
+      >
+      <a href=""></a>
+      <a href=""></a>
+      <a href=""></a>
     </section>
     <section class="contentSection" id="section3">
       <h2 class="sectionHeading">Projekte</h2>
