--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
       <a href="#headerSection">
         <img class="profileImage" src="./profileImage.png" />
       </a>
-      <a class="navbarLink" href="#section1">Über Mich</a>
-      <a class="navbarLink" href="#section2">Links</a>
-      <a class="navbarLink" href="#section3">Projekte</a>
-      <a class="navbarLink" href="#section4"></a>
+      <div class="linkContainer" id="linkContainer">
+        <a class="navbarLink" href="#section1">Über Mich</a>
+        <a class="navbarLink" href="#section2">Links</a>
+        <a class="navbarLink" href="#section3">Projekte</a>
+      </div>
+      <button class="navbarButton" onclick="navbarToggle()">Menu</button>
     </nav>
     <div class="banner">
       <h1>ERPI CODING</h1>
