--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="contentSection" id="section1">
       <h2 class="sectionHeading">Über Mich</h2>
       <p class="infotext">
-        Ich programmiere seit 2024 Webseiten mit HTML, CCC und JavaScript. 2025
+        Ich programmiere seit 2024 Webseiten mit HTML, CSS und JavaScript. 2025
         habe ich auch angefangen mit node.js Webserver und Backends zu
         programmieren.
       </p>
