gradient border and ha modal

--- a/index.html
+++ b/index.html
@@ -7,14 +7,23 @@
       name="google-site-verification"
       content="3DlpLFB08KBqZA1YtmN_Fgg3qxlKX8QiN1bA-zOE1JA"
     />
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
     <title>Erpicoding</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
+  <dialog id="ha">
+    <img src="./img/hausaufgaben-manager.png" />
+    <a
+      href="https://erpicoding.github.io/Hausaufgaben-Manager"
+      class="fancyBorder"
+      >Hausaufgaben-Manager öffnen</a
+    >
+  </dialog>
   <section id="headerSection"></section>
   <header>
     <nav class="navbar">
       <a href="#headerSection">
-        <img class="profileImage" src="./profileImage.png" />
+        <img class="profileImage" src="./img/profileImage.png" />
       </a>
       <div class="linkContainer" id="linkContainer">
         <a class="navbarLink" href="#section1">Über Mich</a>
@@ -26,7 +35,7 @@
     <div class="banner">
       <h1>ERPI CODING</h1>
       <h2>Web-Developer</h2>
-      <a href="#section3" class="bannerLink">Projekte &rarr;</a>
+      <a href="#section3" class="bannerLink fancyBorder">Projekte &rarr;</a>
     </div>
   </header>
   <body>
