add projekts to projekt section

--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
     <title>Erpicoding</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <dialog id="ha">
-    <img src="./img/hausaufgaben-manager.png" />
-    <a
-      href="https://erpicoding.github.io/Hausaufgaben-Manager"
-      class="fancyBorder"
-      >Hausaufgaben-Manager öffnen</a
-    >
-  </dialog>
-  <section id="headerSection"></section>
-  <header>
-    <nav class="navbar">
-      <a href="#headerSection">
-        <img class="profileImage" src="./img/profileImage.png" />
-      </a>
-      <div class="linkContainer" id="linkContainer">
-        <a class="navbarLink" href="#section1">Über Mich</a>
-        <a class="navbarLink" href="#section2">Links</a>
-        <a class="navbarLink" href="#section3">Projekte</a>
-      </div>
-      <button class="navbarButton" onclick="navbarToggle()">Menu</button>
-    </nav>
-    <div class="banner">
-      <h1>ERPI CODING</h1>
-      <h2>Web-Developer</h2>
-      <a href="#section3" class="bannerLink fancyBorder">Projekte &rarr;</a>
-    </div>
-  </header>
   <body>
+    <dialog id="ha">
+      <img src="./img/hausaufgaben-manager.png" />
+      <a
+        href="https://erpicoding.github.io/Hausaufgaben-Manager"
+        class="fancyBorder"
+        >Hausaufgaben-Manager öffnen</a
+      >
+    </dialog>
+    <section id="headerSection"></section>
+    <header>
+      <nav class="navbar">
+        <a href="#headerSection">
+          <img class="profileImage" src="./img/profileImage.png" />
+        </a>
+        <div class="linkContainer" id="linkContainer">
+          <a class="navbarLink" href="#section1">Über Mich</a>
+          <a class="navbarLink" href="#section2">Links</a>
+          <a class="navbarLink" href="#section3">Projekte</a>
+        </div>
+        <button class="navbarButton" onclick="navbarToggle()">Menu</button>
+      </nav>
+      <div class="banner">
+        <h1>ERPI CODING</h1>
+        <h2>Web-Developer</h2>
+        <a href="#section3" class="bannerLink fancyBorder">Projekte &rarr;</a>
+      </div>
+    </header>
     <section class="contentSection" id="section1">
       <h2 class="sectionHeading">Über Mich</h2>
       <p class="infotext">
@@ -78,6 +78,20 @@
     </section>
     <section class="contentSection" id="section3">
       <h2 class="sectionHeading">Projekte</h2>
+      <div class="projektContainer">
+        <div class="projekt">
+          <h3>Hausaufgaben-Manager</h3>
+          <a href="https://erpicoding.github.io/Hausaufgaben-Manager">Öffnen</a>
+          <img width="100%" src="./img/hausaufgaben-manager.png" />
+        </div>
+        <div class="projekt">
+          <h3>Verschlüsselungs Programm</h3>
+          <a href="https://erpicoding.github.io/secret-message-generator/"
+            >Öffnen</a
+          >
+          <img width="100%" src="./img/smg.png" />
+        </div>
+      </div>
     </section>
     <section class="contentSection" id="section4">
       <h2 class="sectionHeading"></h2>
