change language select anamation

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       </p>
       <h3>Programmiersprachen und andere Technologien</h3>
       <div class="languageSelector">
+        <div id="languageSelectorBg"></div>
         <button class="language" onclick="selectLanguage(1)" id="select1">
           HTML
         </button>
@@ -93,10 +94,6 @@
         </div>
       </div>
     </section>
-    <section class="contentSection" id="section4">
-      <h2 class="sectionHeading"></h2>
-    </section>
-    <footer></footer>
     <script src="./script.js"></script>
   </body>
 </html>
