add the most importent coding language SCRATCH

--- a/index.html
+++ b/index.html
@@ -42,27 +42,31 @@
     <section class="contentSection" id="section1">
       <h2 class="sectionHeading">Über Mich</h2>
       <p class="infotext">
-        Ich programmiere seit 2024 Webseiten mit HTML, CSS und JavaScript. 2025
+        Ich programmiere seit 2023 Webseiten mit HTML, CSS und JavaScript. 2025
         habe ich auch angefangen mit node.js Webserver und Backends zu
         programmieren.
       </p>
       <h2>Programmiersprachen und andere Technologien</h2>
       <div class="technologies">
         <div class="technology">
+          <img class="logo" src="./img/scratch.png" />
+          <p>Scratch<br /><span>seit 2020</span></p>
+        </div>
+        <div class="technology">
           <img class="logo" src="./img/html.webp" />
-          <p>HTML<br /><span>Markup Language</span></p>
+          <p>HTML<br /><span>seit 2023</span></p>
         </div>
         <div class="technology">
           <img class="logo" src="./img/CSS_logo.svg" />
-          <p>CSS<br /><span>Stylesheet Language</span></p>
+          <p>CSS<br /><span>seit 2023</span></p>
         </div>
         <div class="technology">
           <img class="logo" src="./img/js_logo.svg" />
-          <p>JavaScript<br /><span>Programming Language</span></p>
+          <p>JavaScript<br /><span>seit 2024</span></p>
         </div>
         <div class="technology">
           <img class="logo" src="./img/node_logo.svg" />
-          <p>node.js<br /><span>Runtime environment</span></p>
+          <p>node.js<br /><span>seit 2025</span></p>
         </div>
       </div>
     </section>
