--- a/index.html
+++ b/index.html
@@ -39,37 +39,59 @@
         <a href="#section3" class="bannerLink">Projekte &rarr;</a>
       </div>
     </header>
-    <section class="contentSection" id="section1">
-      <h2 class="sectionHeading">Über Mich</h2>
-      <p class="infotext">
-        Ich programmiere seit 2023 Webseiten mit HTML, CSS und JavaScript. 2025
-        habe ich auch angefangen mit node.js Webserver und Backends zu
-        programmieren.
-      </p>
-      <h2>Programmiersprachen und andere Technologien</h2>
-      <div class="technologies">
-        <div class="technology">
-          <img class="logo" src="./img/scratch.png" />
-          <p>Scratch<br /><span>seit 2020</span></p>
+    <main>
+      <section class="contentSection" id="section1">
+        <h2 class="sectionHeading">Über Mich</h2>
+        <p class="infotext">
+          Ich programmiere seit 2023 Webseiten mit HTML, CSS und JavaScript.
+          2025 habe ich auch angefangen mit node.js Webserver und Backends zu
+          programmieren.
+        </p>
+        <h2>Programmiersprachen und andere Technologien</h2>
+        <div class="technologies">
+          <div class="technology">
+            <img class="logo scratch" src="./img/logos/scratch.png" />
+            <div class="line"></div>
+            <p>Scratch<br /><span>seit 2020</span></p>
+          </div>
+          <div class="technology">
+            <img class="logo" src="./img/logos/html.webp" />
+            <div class="line"></div>
+            <p>HTML<br /><span>seit 2023</span></p>
+          </div>
+          <div class="technology">
+            <img class="logo" src="./img/logos/css.svg" />
+            <div class="line"></div>
+            <p>CSS<br /><span>seit 2023</span></p>
+          </div>
+          <div class="technology">
+            <img class="logo" src="./img/logos/scss.svg" />
+            <div class="line"></div>
+            <p>SCSS<br /><span>seit 2023</span></p>
+          </div>
+          <div class="technology">
+            <img class="logo" src="./img/logos/js.svg" />
+            <div class="line"></div>
+            <p>JavaScript<br /><span>seit 2024</span></p>
+          </div>
+          <div class="technology">
+            <img class="logo" src="./img/logos/node.svg" />
+            <div class="line"></div>
+            <p>node.js<br /><span>seit 2025</span></p>
+          </div>
+          <div class="technology">
+            <img class="logo react" src="./img/logos/react.png" />
+            <div class="line"></div>
+            <p>React<br /><span>Bald</span></p>
+          </div>
+          <div class="technology">
+            <img class="logo" src="./img/logos/nextjs.png" />
+            <div class="line"></div>
+            <p>NextJS<br /><span>Bald</span></p>
+          </div>
         </div>
-        <div class="technology">
-          <img class="logo" src="./img/html.webp" />
-          <p>HTML<br /><span>seit 2023</span></p>
-        </div>
-        <div class="technology">
-          <img class="logo" src="./img/CSS_logo.svg" />
-          <p>CSS<br /><span>seit 2023</span></p>
-        </div>
-        <div class="technology">
-          <img class="logo" src="./img/js_logo.svg" />
-          <p>JavaScript<br /><span>seit 2024</span></p>
-        </div>
-        <div class="technology">
-          <img class="logo" src="./img/node_logo.svg" />
-          <p>node.js<br /><span>seit 2025</span></p>
-        </div>
-      </div>
-    </section>
+      </section>
+    </main>
     <section class="contentSection linksBg" id="section2">
       <h2 class="sectionHeading">Links</h2>
       <a href="https://github.com/erpicoding" target="_blank" class="firstLink"
