add used languages to projects

--- a/index.html
+++ b/index.html
@@ -110,15 +110,18 @@
       <div class="projektContainer">
         <div class="projekt">
           <h3>Hausaufgaben-Manager</h3>
-          <a href="https://erpicoding.github.io/Hausaufgaben-Manager">Öffnen</a>
           <img width="100%" src="./img/hausaufgaben-manager.png" />
+          <p><span>HTML</span><span>CSS</span><span>JavaScript</span></p>
+          <a href="https://erpicoding.github.io/Hausaufgaben-Manager">Öffnen</a>
         </div>
+
         <div class="projekt">
           <h3>Verschlüsselungs Programm</h3>
-          <a href="https://erpicoding.github.io/secret-message-generator/"
-            >Öffnen</a
-          >
           <img width="100%" src="./img/smg.png" />
+          <p><span>HTML</span><span>CSS</span><span>JavaScript</span></p>
+          <a href="https://erpicoding.github.io/secret-message-generator/"
+            ><span>Öffnen</span></a
+          >
         </div>
       </div>
     </section>
