feature improvements nothing special

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <dialog id="newRecord" class="newRecord">
       <h1>Neuer Rekord:</h1>
       <div><h1 id="recordField"></h1></div>
-      <p>Versuche: <span id="trysField"></span></p>
+      <p>Fehlgeschlagende Versuche: <span id="trysField"></span></p>
       <button onclick="newRecord.close()">Fertig</button>
     </dialog>
     <script src="./script.js"></script>
