add technologies section to navbar

--- a/index.html
+++ b/index.html
@@ -27,25 +27,28 @@
           <img class="profileImage" src="./img/profileImage.png" />
         </a>
         <div class="linkContainer" id="linkContainer">
-          <a class="navbarLink" href="#section1">Über Mich</a>
-          <a class="navbarLink" href="#section2">Projekte</a>
+          <a class="navbarLink" href="#sectionInfo">Über Mich</a>
+          <a class="navbarLink" href="#sectionTechnologies">Technologien</a>
+          <a class="navbarLink" href="#sectionProjects">Projekte</a>
         </div>
         <button class="navbarButton" onclick="navbarToggle()">Menu</button>
       </nav>
       <div class="banner animatedBorder">
         <h1>ERPI CODING</h1>
         <h2>Web-Developer</h2>
-        <a href="#section2" class="bannerLink">Projekte &rarr;</a>
+        <a href="#sectionProjects" class="bannerLink">Projekte &rarr;</a>
       </div>
     </header>
     <main>
-      <section class="contentSection" id="section1">
+      <section class="contentSection" id="sectionInfo">
         <h2 class="sectionHeading">Über Mich</h2>
         <p class="infotext">
           Ich programmiere seit 2023 Webseiten mit HTML, CSS und JavaScript.
           2025 habe ich auch angefangen mit node.js Webserver und Backends zu
           programmieren.
         </p>
+      </section>
+      <section class="contentSection" id="sectionTechnologies">
         <h2>Programmiersprachen und andere Technologien</h2>
         <div class="technologies">
           <div class="technology">
@@ -95,7 +98,7 @@
         </div>
       </section>
     </main>
-    <section class="contentSection" id="section2">
+    <section class="contentSection" id="sectionProjects">
       <h2 class="sectionHeading">Projekte</h2>
       <div class="projektContainer">
         <div class="projekt">
