add github links to projects

--- a/index.html
+++ b/index.html
@@ -105,16 +105,32 @@
           <h3>Hausaufgaben-Manager</h3>
           <img width="100%" src="./img/hausaufgaben-manager.png" />
           <p><span>HTML</span><span>CSS</span><span>JavaScript</span></p>
-          <a href="https://erpicoding.github.io/Hausaufgaben-Manager">Öffnen</a>
+          <div class="links">
+            <a href="https://erpicoding.github.io/Hausaufgaben-Manager"
+              >Öffnen</a
+            >
+            <a
+              class="github"
+              href="https://github.com/erpicoding/Hausaufgaben-Manager"
+              >Github</a
+            >
+          </div>
         </div>
 
         <div class="projekt">
           <h3>Verschlüsselungs Programm</h3>
           <img width="100%" src="./img/smg.png" />
           <p><span>HTML</span><span>CSS</span><span>JavaScript</span></p>
-          <a href="https://erpicoding.github.io/secret-message-generator/"
-            ><span>Öffnen</span></a
-          >
+          <div class="links">
+            <a href="https://erpicoding.github.io/secret-message-generator/"
+              >Öffnen</a
+            >
+            <a
+              class="github"
+              href="https://github.com/erpicoding/secret-message-generator/"
+              >Github</a
+            >
+          </div>
         </div>
       </div>
     </section>
