add github link to banner

--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
       <div class="banner animatedBorder">
         <h1>ERPI CODING</h1>
         <h2>Web-Developer</h2>
-        <a href="#sectionProjects" class="bannerLink">Projekte &rarr;</a>
+        <div class="line"></div>
+        <div class="links">
+          <a href="https://github.com/erpicoding" target="_blank"
+            ><img src="./img/logos/github-mark-white.svg" height="30px"
+          /></a>
+          <a href="#sectionProjects" class="bannerLink">Projekte &rarr;</a>
+        </div>
       </div>
     </header>
     <main>
