add react project

--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
           <div class="technology">
             <img class="logo react" src="./img/logos/react.png" />
             <div class="line"></div>
-            <p>React<br /><span class="translate7"></span></p>
+            <p>
+              React<br /><span><span class="translate6"></span> 2025</span>
+            </p>
           </div>
           <div class="technology">
             <img class="logo" src="./img/logos/nextjs.png" />
@@ -132,13 +134,13 @@
         <h2 class="sectionHeading translateHeader3"></h2>
         <div class="projektContainer">
           <div class="projekt">
-            <h3 class="translate8"></h3>
-            <img width="100%" src="./img/hausaufgaben-manager.png" />
+            <h3 class="translateProject1"></h3>
+            <img width="100%" src="./img/hausaufgaben-manager.webp" />
             <p><span>HTML</span><span>CSS</span><span>JavaScript</span></p>
             <div class="links">
               <a
                 href="https://erpicoding.github.io/Hausaufgaben-Manager"
-                class="translate10"
+                class="translateOpenProject"
               ></a>
               <a
                 class="github"
@@ -149,13 +151,13 @@
           </div>
 
           <div class="projekt">
-            <h3 class="translate9"></h3>
+            <h3 class="translateProject2"></h3>
             <img width="100%" src="./img/smg.png" />
             <p><span>HTML</span><span>CSS</span><span>JavaScript</span></p>
             <div class="links">
               <a
                 href="https://erpicoding.github.io/secret-message-generator/"
-                class="translate10"
+                class="translateOpenProject"
               ></a>
               <a
                 class="github"
@@ -164,15 +166,24 @@
               >
             </div>
           </div>
+
+          <div class="projekt">
+            <h3 class="translateProject3"></h3>
+            <img width="100%" src="./img/nvs.webp" />
+            <p><span>React</span><span>TailwindCSS</span></p>
+            <div class="links">
+              <a href="https://neverseentv.de" class="translateOpenProject"></a>
+            </div>
+          </div>
         </div>
       </section>
     </main>
 
     <dialog id="newRecord" class="newRecord">
-      <h1 class="translate11"></h1>
+      <h1 class="translateGame1"></h1>
       <div><h1 id="recordField"></h1></div>
-      <p><span class="translate12"></span><span id="trysField"></span></p>
-      <button class="translate13" onclick="newRecord.close()">Fertig</button>
+      <p><span class="translateGame2"></span><span id="trysField"></span></p>
+      <button class="translateGame3" onclick="newRecord.close()">Fertig</button>
     </dialog>
     <script src="./script.js" defer></script>
   </body>
