add show nvs url parameter

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
           </div>
 
-          <div class="projekt">
+          <div class="projekt" id="nvsProject" hidden>
             <h3 class="translateProject3"></h3>
             <img width="100%" src="./img/nvs.webp" />
             <p><span>React</span><span>TailwindCSS</span></p>
